--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.2",
     "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
